<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/ignore"
        android:title="@string/title_find" />

    <item
        android:id="@+id/navigation_putout"
        android:icon="@drawable/putout_un"
        android:title="@string/title_putout"/>

    <item
        android:id="@+id/navigation_collect"
        android:icon="@drawable/shoucang"
        android:title="@string/title_collect" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/my"
        android:title="@string/title_my" />


</menu>