<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/breakfood">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/grayo"
            android:stretchColumns="1">
            <TableRow>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/message"
                    android:scaleType="centerCrop"
                    android:layout_marginLeft="10dp"/>
                <TextView/>
                <ImageButton
                    android:id="@+id/setting"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/setlogo"
                    android:background="@color/transparent"
                    android:layout_marginRight="10dp"/>
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/grayo">
            <ImageButton
                android:id="@+id/my"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/my_circle"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:layout_marginTop="70dp"/>
            <TextView
                android:id="@+id/my_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="厨娘"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/my_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="美食美客，一日餐三都是美好生活"
                android:textColor="@color/white"
                android:textSize="10dp"
                android:layout_marginTop="10dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,2,4"
                android:layout_marginTop="15dp">
                <TableRow>
                    <TableLayout android:layout_gravity="center">
                        <TextView
                            android:text="@string/my_active"
                            android:textSize="20dp"
                            android:layout_gravity="center"
                            android:textColor="@color/gray"/>
                        <TextView
                            android:id="@+id/dataactive"
                            android:layout_width="47dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:text="@string/data_active"
                            android:textColor="@color/gray"
                            android:textSize="16dp"
                            android:layout_marginTop="5dp"/>
                    </TableLayout>
                    <View
                        android:layout_width="2dp"
                        android:background="@color/grayo"/>
                    <TableLayout android:layout_gravity="center">
                        <TextView
                            android:text="@string/my_attend"
                            android:textSize="20dp"
                            android:textColor="@color/gray"
                            android:layout_gravity="center"/>
                        <TextView
                            android:id="@+id/dataattend"
                            android:text="@string/data_attend"
                            android:textColor="@color/gray"
                            android:layout_gravity="center"
                            android:textSize="16dp"
                            android:layout_marginTop="5dp"/>
                    </TableLayout>
                    <View
                        android:layout_width="2dp"
                        android:background="@color/grayo"/>
                    <TableLayout android:layout_gravity="center">
                        <TextView
                            android:text="@string/my_collect"
                            android:textSize="20dp"
                            android:textColor="@color/gray"
                            android:layout_gravity="center"/>
                        <TextView
                            android:id="@+id/datacollect"
                            android:text="@string/data_collect"
                            android:textColor="@color/gray"
                            android:layout_gravity="center"
                            android:textSize="16dp"
                            android:layout_marginTop="5dp"/>
                    </TableLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TableLayout
            android:id="@+id/my_info"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:stretchColumns="1">
            <TableRow>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ower"
                    android:layout_margin="2dp"/>
                <TextView
                    android:text="个人信息"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/gray"
                    android:paddingLeft="8dp"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/right"
                    android:layout_margin="2dp" />
            </TableRow>
            <View
                android:layout_marginTop="4dp"
                android:layout_height="2dp"
                android:background="@color/grayo"></View>
        </TableLayout>
        <TableLayout
            android:id="@+id/lanzi"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:stretchColumns="1">
            <TableRow>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/lanzi"
                    android:layout_margin="2dp"/>
                <TextView
                    android:text="菜篮子"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/gray"
                    android:paddingLeft="8dp"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/right"
                    android:layout_margin="2dp" />
            </TableRow>
            <View
                android:layout_marginTop="4dp"
                android:layout_height="2dp"
                android:background="@color/grayo"></View>
        </TableLayout>
        <TableLayout
            android:id="@+id/my_collect"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:stretchColumns="1">
            <TableRow>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/collect"
                    android:layout_margin="2dp"/>
                <TextView
                    android:text="我的收藏"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/gray"
                    android:paddingLeft="8dp"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/right"
                    android:layout_margin="2dp" />
            </TableRow>
            <View
                android:layout_marginTop="4dp"
                android:layout_height="2dp"
                android:background="@color/grayo"></View>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:stretchColumns="1">
            <TableRow>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/about"
                    android:layout_margin="2dp"/>
                <TextView
                    android:text="关于我们"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/gray"
                    android:paddingLeft="8dp"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/right"
                    android:layout_margin="2dp" />
            </TableRow>
            <View
                android:layout_marginTop="4dp"
                android:layout_height="2dp"
                android:background="@color/grayo"></View>
        </TableLayout>
    </LinearLayout>
</LinearLayout>